# CertificateFuzzer

./: .gitignore  CMakeLists.txt  build.gyp  build.sh  readme.txt  runCertFuzzer.sh
.github/workflows/: codeql-analysis.yml
Misc/certificates/ca/: ca-root.der  ca-root.pem
Misc/certificates/leaf/: gitlab.der
Misc/certificates/server/: test-cert.der
Misc/keys/: ca-key.pkcs8  leaf-cert-privkey.pem  leaf-cert-pubkey.der
src/: CertificateMutator.h  DERObject.cpp  DERObject.h  base64.cpp  base64.h  changemanipulator.cpp  changemanipulator.h  constants.h  deletionmanipulator.cpp  deletionmanipulator.h  generalizedtimemanipulator.cpp  generalizedtimemanipulator.h  help.cpp  help.h  ia5stringmanipulator.cpp  ia5stringmanipulator.h  insertionmanipulator.cpp  insertionmanipulator.h  intmanipulator.cpp  intmanipulator.h  main.cpp  manipulator.cpp  manipulator.h  oidmanipulator.cpp  oidmanipulator.h  printablestringmanipulator.cpp  printablestringmanipulator.h  test.cpp  utctimemanipulator.cpp  utctimemanipulator.h  utf8manipulator.cpp  utf8manipulator.h
